--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,57 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/kendavidn/GoContactR
 BugReports: https://github.com/kendavidn/GoContactR/issues
-Suggests: 
-    knitr,
-    rmarkdown
 VignetteBuilder: knitr
+Imports: 
+    pacman,
+    forcats,
+    stringr,
+    dplyr,
+    purrr,
+    readr,
+    tidyr,
+    tibble,
+    tidyverse,
+    preferably,
+    jsonlite,
+    httr,
+    charlatan,
+    clock,
+    promises,
+    pagedreport,
+    officedown,
+    rmarkdown,
+    flextable,
+    huxtable,
+    rio,
+    pander,
+    rvest,
+    linelist,
+    gtools,
+    gt,
+    scales,
+    janitor,
+    glue,
+    anytime,
+    stringi,
+    visdat,
+    inspectdf,
+    lubridate,
+    magrittr,
+    reactablefmtr,
+    htmlwidgets,
+    reactable,
+    fresh,
+    shinycssloaders,
+    shinydashboardPlus,
+    shinydashboard,
+    shinyWidgets,
+    shinyjs,
+    shiny,
+    plotly,
+    ggplot2,
+    highcharter,
+    paletteer,
+    here,
+    webshot,
+    remotes
